--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,11 @@
         <service
             android:name=".MyServiceMQTT"
             android:enabled="true"
-            android:exported="true"
-            android:stopWithTask="false"></service>
+            android:exported="true"></service>
         <!-- Mqtt Service -->
-        <service android:name="org.eclipse.paho.android.service.MqttService" />
+        <service
+            android:name="org.eclipse.paho.android.service.MqttService"
+            android:enabled="true"/>
     </application>
 
 </manifest>
