--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    compile 'net.danlew:android.joda:2.9.9.1'
+    compile 'com.android.volley:volley:1.0.0'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     compile 'com.android.support:appcompat-v7:26.+'
