--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -26,6 +33,12 @@ dependencies {
     })
     compile 'net.danlew:android.joda:2.9.9.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    compile 'com.github.instacart.truetime-android:library-extension-rx:3.3'
+
+    // or if you want the vanilla version of Truetime:
+    compile 'com.github.instacart.truetime-android:library:3.3'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     compile 'com.android.support:appcompat-v7:26.+'
