--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ allprojects {
         maven {
             url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
         }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
